lb.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: srushti-app5
  name: srushti-intrenal-lb
  namespace: srushti-space
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: srushti-app5
status:
  loadBalancer: {}
