ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: srushti-space
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: srushti.ashutoshh.in 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: srushti-intrenal-lb
            port:
              number: 80
